--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -1,10 +1,12 @@
 .mainContainer {
-  padding: 15px 30px;
+  margin: 25px 50px;
+  border-bottom: 1px solid #718096;
+  padding-bottom: 10px;
 }
 
 .usernameAvatarConatainer {
   display: flex;
-  color: rgb(57, 127, 231);
+  color: #718096;
 }
 
 .usrnameFavouriteCountConatainer {
@@ -13,7 +15,8 @@
 }
 
 .favouritesCount{
-  border: 1px solid rgb(60, 163, 134);
+  border: 1px solid #718096;
+  border-radius: 5px;
   padding: 5px 5px;
 }
 
@@ -30,5 +33,10 @@
   padding: 5px;
   border: 1px solid #718096;
   margin-left: 8px;
-  border-radius: 20px;
+  border-radius: 5px;
+}
+
+.loaderWrapper {
+  display: flex;
+  justify-content: center;
 }
