--- a/src/Components/Register/register.scss
+++ b/src/Components/Register/register.scss
@@ -1,4 +1,16 @@
 .registerFormWrapper {
   margin: 90px auto;
   max-width: 500px;
+  padding: 40px 20px;
+  background: rgb(251, 251, 251);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+   button {
+    width: 100%;
+   }
+   a{
+    color: rgb(0,102,215);
+   }
 }
+
+
