--- a/src/Components/UserProfile/userProfile.scss
+++ b/src/Components/UserProfile/userProfile.scss
@@ -11,3 +11,28 @@ align-items: center;
   flex-direction: column;
   align-items: center;
 }
+
+
+@keyframes floatAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.articlesHeading {
+  margin: 10px 0 0 50px;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  animation: floatAnimation 2s infinite ease-in-out;
+}
+
+@media (max-width: 550px) {
+  .articlesHeading {
+    margin: 10px 0 0 28px;
+  }
+}
