--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -16,7 +16,7 @@
 .container:hover {
   box-shadow: 8px 28px 50px rgba(39, 44, 49, .07), 1px 6px 12px rgba(39, 44, 49, .04);
   transition: all .1 s ease;
-  transform: translate3D(0, -1px, 0) scale(1.01);
+  transform: translate3D(0, -1px, 0) scale(1);
 }
 
 .usernameAvatarConatainer {
@@ -82,6 +82,10 @@
   display: flex;
   justify-content: center;
   width: 100%;
+}
+.favorited {
+  border-radius: 5px;
+  background-color: rgb(131, 12, 12);
 }
 
 @media (max-width: 1040px) {
