button color changed

--- a/src/Components/SingleArticle/singleArticle.scss
+++ b/src/Components/SingleArticle/singleArticle.scss
@@ -61,7 +61,7 @@
 }
 
 .commentSection button:hover {
-  background-color: #8a56f3;
+  background-color: #8349f7;
   transition: 0.3s all ease-in-out;
 }
 
