--- a/src/Components/UserProfile/userProfile.scss
+++ b/src/Components/UserProfile/userProfile.scss
@@ -2,16 +2,31 @@
   height: 200px;
   display: flex;
   flex-direction: column;
-justify-content: center;
-align-items: center;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: auto;
 }
 
-.profileAvatarInformation{
+.profileAvatarInformation {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.followButtonWrapper {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  button {
+    min-width: 200px;
+  }
+}
+
+.followButtonWrapper button:hover {
+  background-color: #7030f1;
+  transition: 0.1s all ease-in-out;
+}
 
 @keyframes floatAnimation {
   0% {
@@ -26,9 +41,13 @@ align-items: center;
 }
 .articlesHeading {
   margin: 10px 0 0 50px;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
   animation: floatAnimation 2s infinite ease-in-out;
+  background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 @media (max-width: 550px) {
